some user feedback and a nice little bar, HUGE bugfix with storing refutation nodes and cutoffs.

--- a/docs/style/chess.css
+++ b/docs/style/chess.css
@@ -96,9 +96,52 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: larger;
     font-weight: 700;
+}
+.topbar {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+    align-items: center;
+    width: 100%;
+    padding: 10px 0;
+    border-radius: 7px;
+    background-color: aqua;
+    top: -22%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: #F1FAEE;
+}
+.headcont {
+    position: relative;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.title {
+    transform: translateY(.2em);
+    padding-left: 10px;
+    font-size: xx-large;
+    font-weight: 700;
+}
+.outcont {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 40%;
+    height: 100%;
+    padding-left: 10px;
+    /* overflow: auto; */
+}
+.output {
+    transform: translateY(.3em);
+    font-weight: bolder;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: green;
 }
 
 .hidden {
