--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -1,5 +1,6 @@
 html {
     background-color: blanchedalmond;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .cont {
